--- a/templates/korobka.html
+++ b/templates/korobka.html
@@ -545,7 +545,7 @@
 <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     Feature Section
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
-<div class="integrator-feature-section padding-bottom-150 padding-top-150">
+<div class="integrator-feature-section padding-bottom-150 integrator-subsection">
   <div class="container">
     <div class="section-heading">
       <h2 class="integrator-subheading heading-md text-center">
