--- a/templates/korobka.html
+++ b/templates/korobka.html
@@ -99,6 +99,64 @@
   </div>
 </div>
 
+<!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~
+    Task Section
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
+
+<div class="integrator-task-section integrator-task-section-invert  padding-bottom-150 padding-top-150" id="feature">
+  <div class="container">
+    <div class="section-heading">
+      <h2 class="integrator-subheading heading-md text-center">
+        Коробочная версия 1С-Битрикс24 — это  <span class="primary">мощное корпоративное пространство</span>, в котором объединены все процессы компании: <span
+          class="primary">коммуникации, управление, автоматизация и CRM</span>
+      </h2>
+    </div>
+    <div class="integrator-task">
+      <div class="integrator-task-two">
+        <div class="interesting-point">
+          <span class="poin-number">
+            01
+          </span>
+          <div class="interesting-image"><img src="{% static '/image/icons/task-2.png' %}" alt="image alt"
+              class="inline-svg" /></div>
+          <h3 class="interesting-title">Единое пространство</h3>
+          <p class="integrator-text">Создать единое цифровое пространство для общения и совместной работы сотрудников</p>
+        </div>
+        <div class="interesting-point">
+          <span class="poin-number">
+            02
+          </span>
+          <div class="interesting-image"><img src="{% static '/image/service/prodlenie-1.png' %}" alt="image alt"
+              class="inline-svg" /></div>
+          <h3 class="interesting-title">Работа без сложностей</h3>
+          <p class="integrator-text">Эффективно адаптировать новых сотрудников и управлять проектами</p>
+        </div>
+      </div>
+      <div class="integrator-task-two">
+        <div class="interesting-point">
+          <span class="poin-number">
+            03
+          </span>
+          <div class="interesting-image"><img src="{% static '/image/icons/task-5.png' %}" alt="image alt"
+              class="inline-svg" /></div>
+          <h3 class="interesting-title">Гибкая настройка</h3>
+          <p class="integrator-text">Настроить бизнес-процессы, автоматизацию продаж и CRM-маркетинг под нужды вашей компании</p>
+        </div>
+        <div class="interesting-point">
+          <span class="poin-number">
+            04
+          </span>
+          <div class="interesting-image"><img src="{% static '/image/icons/task-4.png' %}" alt="image alt"
+              class="inline-svg" /></div>
+          <h3 class="interesting-title">Экономия ресурсов</h3>
+          <p class="integrator-text">Работать с документами онлайн, использовать встроенные мессенджеры и проводить видеозвонки без ограничений</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
 
 <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~
     Task Section
