--- a/templates/market.html
+++ b/templates/market.html
@@ -34,6 +34,61 @@
 </div>
 
 <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~
+    Task Section
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
+
+<div class="integrator-task-section integrator-task-section-invert  padding-bottom-150 padding-top-150" id="feature">
+  <div class="container">
+    <div class="section-heading">
+      <h2 class="integrator-subheading heading-md text-center">
+        Битрикс24.Маркет Плюс — это <span class="primary">обширный каталог</span> решений, расширяющих возможности вашей системы Битрикс24
+      </h2>
+    </div>
+    <div class="integrator-task">
+      <div class="integrator-task-two">
+        <div class="interesting-point">
+          <span class="poin-number">
+            01
+          </span>
+          <div class="interesting-image"><img src="{% static '/image/icons/task-2.png' %}" alt="image alt"
+              class="inline-svg" /></div>
+          <h3 class="interesting-title">Расширяют стандартные функции CRM, задач и проектов, контакт-центра и других инструментово</h3>
+          <p class="integrator-text">В каталоге Битрикс24 Маркет плюс для вас доступно более 3000 приложений и бизнес сценариев.</p>
+          <p class="integrator-text">Шаблоны сайтов, чат-боты, готовые решения для CRM, мессенджеры и многое другое — за фикисрованную цену и без ограничений устанавливайте все, что вам необходимо.</p>
+        </div>
+        <div class="interesting-point">
+          <span class="poin-number">
+            02
+          </span>
+          <div class="interesting-image"><img src="{% static '/image/icons/task-5.png' %}" alt="image alt"
+              class="inline-svg" /></div>
+          <h3 class="interesting-title">Добавляют интеграции со сторонними сервисами, которые помогают автоматизировать бизнес-процессы</h3>
+          <p class="integrator-text">Быстрое и удобное подключение сервисов:</p>
+          <p class="integrator-text">Телефония, платёжные системы, службы доставки, обмен данными с 1С, соц.сети и мессенджеры, голосовые помощники, видеоконференции, СМС-рассылки и многие другие.</p>
+        </div>
+      </div>
+      <div class="integrator-task-two">
+        <div class="interesting-point">
+          <span class="poin-number">
+            03
+          </span>
+          <div class="interesting-image"><img src="{% static '/image/service/prodlenie-1.png' %}" alt="image alt"
+              class="inline-svg" /></div>
+          <h3 class="interesting-title">Повышают эффективность работы компании за счёт персонализированных инструментов и готовых модулей</h3>
+          <p class="integrator-text">Во все платные тарифы Битрикс24 включён REST API без ограничений.</p>
+          <p class="integrator-text">Вы сможете самостоятельно добавлять сторонние сервисы в свой Битрикс 24. С помощью локальных приложений и вебхуков у вас будут работать индивидуальные сценарии — все, для вашего удобства и эффективной работы</p>
+        </div>
+        <div class="interesting-point point-color">
+          <div class="point-color__image">
+            <img src="{% static '/image/service/service-color.png' %}" alt="Service">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~
     Interesting Section
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 
