--- a/templates/oblako.html
+++ b/templates/oblako.html
@@ -9,9 +9,10 @@
         <div class="home-8_hero-content-block" bis_skin_checked="1">
           <div class="home-8_hero-text-block" bis_skin_checked="1">
             <h1 class="integrator-heading heading-l hero-content__title text-center">
-              Облачная версия Битрикс24 
+              Облачная версия Битрикс24
             </h1>
-            <p class="integrator-text text-center">Доступность, масштабируемость и полный функционал для вашего бизнеса в любой момент.</p>
+            <p class="integrator-text text-center">Доступность, масштабируемость и полный функционал для вашего бизнеса
+              в любой момент.</p>
           </div>
           <div class="integrator-row">
             <a href="#" class="integrator-btn btn-fill--up">
@@ -93,6 +94,72 @@
         </div>
         <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left" data-aos-delay="800">
           <p class="integrator-text">База знаний</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~
+    Task Section
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
+
+<div class="integrator-task-section integrator-task-section-invert  padding-bottom-150 padding-top-150" id="feature">
+  <div class="container">
+    <div class="section-heading">
+      <h2 class="integrator-subheading heading-md text-center">
+        <span class="primary">Битрикс24</span>  — это единая цифровая платформа, объединяющая все инструменты <span
+          class="primary">для эффективного управления</span> бизнесом, командой и коммуникациями
+      </h2>
+    </div>
+    <div class="integrator-task">
+      <div class="integrator-task-three">
+        <div class="interesting-point">
+          <span class="poin-number">
+            01
+          </span>
+          <div class="interesting-image"><img src="{% static '/image/icons/task-1.png' %}" alt="image alt"
+              class="inline-svg" /></div>
+          <h3 class="interesting-title">Мгновенный старт</h3>
+          <p class="integrator-text">Не нужно ничего устанавливать или настраивать — просто подключитесь к интернету и начинайте работать</p>
+        </div>
+        <div class="interesting-point">
+          <span class="poin-number">
+            02
+          </span>
+          <div class="interesting-image"><img src="{% static '/image/icons/task-2.png' %}" alt="image alt"
+              class="inline-svg" /></div>
+          <h3 class="interesting-title">Доступность везде и всегда</h3>
+          <p class="integrator-text">Работайте через браузер на любом устройстве: ПК, ноутбуке, планшете или смартфоне</p>
+        </div>
+        <div class="interesting-point">
+          <span class="poin-number">
+            03
+          </span>
+          <div class="interesting-image"><img src="{% static '/image/icons/task-3.png' %}" alt="image alt"
+              class="inline-svg" /></div>
+          <h3 class="interesting-title">Безопасность и надёжность</h3>
+          <p class="integrator-text">Все данные шифруются и доступны только вашему бизнесу</p>
+        </div>
+      </div>
+      <div class="integrator-task-two">
+        <div class="interesting-point">
+          <span class="poin-number">
+            04
+          </span>
+          <div class="interesting-image"><img src="{% static '/image/icons/task-4.png' %}" alt="image alt"
+              class="inline-svg" /></div>
+          <h3 class="interesting-title">Экономия ресурсов</h3>
+          <p class="integrator-text">Данные хранятся на защищённых серверах 1С-Битрикс, что избавляет от затрат на собственное оборудование и IT-поддержку</p>
+        </div>
+        <div class="interesting-point">
+          <span class="poin-number">
+            05
+          </span>
+          <div class="interesting-image"><img src="{% static '/image/icons/task-5.png' %}" alt="image alt"
+              class="inline-svg" /></div>
+          <h3 class="interesting-title">Интеграция без сложностей</h3>
+          <p class="integrator-text">Встроенные подключения к популярным сервисам позволяют быстро объединить инструменты, которые вы уже используете</p>
         </div>
       </div>
     </div>
