--- a/templates/market.html
+++ b/templates/market.html
@@ -171,7 +171,7 @@
         </div>
       </div>
       <div class="plans-3 mt-5" data-plan-id="pricing-1" data-plan-active="korobka" data-plan-active="oblako">
-        <div class="plan plan-base">
+        <div class="plan plan-short plan-base">
           <div class="plan__header">
             <div class="service-card__title">Интернет-магазин+CRM</div>
           </div>
@@ -179,13 +179,18 @@
             <div class="plan-description">
               <h3 class="plan__title">2 089, 20 byn</h3>
               <p>Количество пользователей</p>
+              <div class="price__counts">
+                <a href="#" class="integrator-btn integrator-btn-white white-active btn-fill--up">
+                  <span>12</span>
+                </a>
+              </div>
               <a href="#" class="integrator-btn btn-fill--up">
                 <span>Купить</span>
               </a>
             </div>
           </div>
         </div>
-        <div class="plan plan-base">
+        <div class="plan plan-short plan-base">
           <div class="plan__header">
             <div class="service-card__title">Корпоративный портал-500</div>
           </div>
@@ -193,13 +198,27 @@
             <div class="plan-description">
               <h3 class="plan__title">4 197, 60 byn</h3>
               <p>Количество пользователей</p>
+              <div class="price__counts">
+                <a href="#" class="integrator-btn integrator-btn-white btn-fill--up">
+                  <span>50</span>
+                </a>
+                <a href="#" class="integrator-btn integrator-btn-white btn-fill--up">
+                  <span>100</span>
+                </a>
+                <a href="#" class="integrator-btn integrator-btn-white btn-fill--up">
+                  <span>250</span>
+                </a>
+                <a href="#" class="integrator-btn integrator-btn-white white-active btn-fill--up">
+                  <span>500</span>
+                </a>
+              </div>
               <a href="#" class="integrator-btn btn-fill--up">
                 <span>Купить</span>
               </a>
             </div>
           </div>
         </div>
-        <div class="plan plan-purple">
+        <div class="plan plan-short plan-purple">
           <div class="plan__header">
             <div class="service-card__title">Энтерпрайз</div>
           </div>
@@ -207,6 +226,11 @@
             <div class="plan-description">
               <h3 class="plan__title dynamic-value" data-yearly="352 byn" data-monthly="439 byn">4 197, 60 byn</h3>
               <p>Количество пользователей</p>
+              <div class="price__counts">
+                <a href="#" class="integrator-btn integrator-btn-white white-active btn-fill--up">
+                  <span>1000</span>
+                </a>
+              </div>
               <a href="#" class="integrator-btn integrator-btn-purple btn-fill--up">
                 <span>Купить</span>
               </a>
