--- a/templates/prodlenie.html
+++ b/templates/prodlenie.html
@@ -11,7 +11,8 @@
             <h1 class="integrator-heading heading-l hero-content__title text-center">
               Продление лицензии Битрикс24
             </h1>
-            <p class="integrator-text text-center">Продолжайте пользоваться привычными преимуществами Битрикс24 с Правильными Интеграторами.</p>
+            <p class="integrator-text text-center">Продолжайте пользоваться привычными преимуществами Битрикс24 с
+              Правильными Интеграторами.</p>
           </div>
           <div class="integrator-row">
             <a href="#" class="integrator-btn btn-fill--up">
@@ -33,6 +34,45 @@
 </div>
 
 <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~
+    Extention Section
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
+
+<div class="integrator-extention-section padding-bottom-150 padding-top-150" id="extention">
+  <div class="container">
+    <div class="integrator-section-heading">
+      <h2 class="integrator-subheading heading-md text-center">
+        Продление лицензии
+      </h2>
+      <p class="integrator-text text-center">Используя Битрикс24, вы получаете полный доступ к возможностям платформы
+        на протяжении года. После этого необходимо продлить лицензию, чтобы сохранить функционал и обновления.</p>
+    </div>
+    <div class="integrator-extention-points">
+      <div class="extention-point">
+        <h3 class="extention-title">Облачная версии</h3>
+        <p class="integrator-text">Просто оплатите выбранный тариф — не нужно сервера, системного администратора или технических хлопот. Все данные и обновления хранятся на серверах 1С-Битрикс, где обеспечиваются безопасность и техническая поддержка.</p>
+        <p class="integrator-text">Если срок тарифа закончится, портал перейдёт на бесплатный режим с ограниченными функциями. Поэтому важно продлевать лицензию своевременно, чтобы не потерять доступ к нужным инструментам.</p>
+        <a href="#" class="integrator-btn integrator-btn-light btn-fill--up">
+          <span>Тарифы на продление</span>
+        </a>
+        <div class="integrator-cta-base_over">
+          <img src="{% static '/image/cta/bubbles-top.png' %}" alt="Bubbles" />
+        </div>
+      </div>
+      <div class="extention-point">
+        <h3 class="extention-title">Коробочная версии</h3>
+        <p class="integrator-text">Коробочная лицензия приобретается один раз, а подписка на обновления действует 12 месяцев. По истечении этого срока для получения новых обновлений и поддержки необходимо продлить подписку. Без продления система продолжит работать, но доступ к обновлениям и части функций будет закрыт.</p>
+        <a href="#" class="integrator-btn integrator-btn-light btn-fill--up">
+          <span>Тарифы на продление</span>
+        </a>
+        <div class="integrator-cta-base_over">
+          <img src="{% static '/image/cta/bubbles-buttom.png' %}" alt="Bubbles" />
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~
     Interesting Section
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 
@@ -40,7 +80,7 @@
   <div class="container">
     <div class="section-heading">
       <h2 class="integrator-subheading heading-md text-center">
-        Возможности платных лицензий 
+        Возможности платных лицензий
       </h2>
     </div>
     <div class="integrator-interesting-points">
@@ -51,7 +91,8 @@
         <div class="interesting-image"><img src="{% static '/image/service/prodlenie-1.png' %}" alt="image alt"
             class="inline-svg" /></div>
         <h3 class="interesting-title">Доступ к новым модулям и функциям сразу после релиза</h3>
-        <p class="integrator-text">Все свежие возможности Битрикс24 становятся доступны вам сразу после их выхода. Вы всегда работаете с актуальной версией системы и получаете инструменты, которые помогают бизнесу расти.</p>
+        <p class="integrator-text">Все свежие возможности Битрикс24 становятся доступны вам сразу после их выхода.
+          Вы всегда работаете с актуальной версией системы и получаете инструменты, которые помогают бизнесу расти.</p>
       </div>
       <div class="interesting-point">
         <span class="poin-number">
@@ -60,7 +101,8 @@
         <div class="interesting-image"><img src="{% static '/image/service/prodlenie-2.png' %}" alt="image alt"
             class="inline-svg" /></div>
         <h3 class="interesting-title">Регулярные обновления и оптимизация системы</h3>
-        <p class="integrator-text">Каждое обновление улучшает производительность, устраняет ошибки и делает работу платформы ещё стабильнее.Ваш Битрикс24 становится быстрее, удобнее и надёжнее с каждым релизом.</p>
+        <p class="integrator-text">Каждое обновление улучшает производительность, устраняет ошибки и делает работу
+          платформы ещё стабильнее.Ваш Битрикс24 становится быстрее, удобнее и надёжнее с каждым релизом.</p>
       </div>
       <div class="interesting-point">
         <span class="poin-number">
@@ -69,7 +111,9 @@
         <div class="interesting-image"><img src="{% static '/image/service/prodlenie-3.png' %}" alt="image alt"
             class="inline-svg" /></div>
         <h3 class="interesting-title">Обновления модуля безопасности данных</h3>
-        <p class="integrator-text">Новые версии включают актуальные механизмы защиты, предотвращающие утечки и несанкционированный доступ.Ваши данные надёжно зашифрованы и соответствуют современным стандартам безопасности.</p>
+        <p class="integrator-text">Новые версии включают актуальные механизмы защиты, предотвращающие утечки
+          и несанкционированный доступ.Ваши данные надёжно зашифрованы и соответствуют современным стандартам
+          безопасности.</p>
       </div>
       <div class="interesting-point">
         <span class="poin-number">
@@ -78,7 +122,8 @@
         <div class="interesting-image"><img src="{% static '/image/service/prodlenie-4.png' %}" alt="image alt"
             class="inline-svg" /></div>
         <h3 class="interesting-title">Круглосуточная техническая поддержка от специалистов Битрикс24</h3>
-        <p class="integrator-text">Команда профессионалов всегда готова помочь с настройкой, обновлением или решением технических вопросов.Вы получаете стабильную работу системы и оперативную помощь при любых обращениях.</p>
+        <p class="integrator-text">Команда профессионалов всегда готова помочь с настройкой, обновлением или решением
+          технических вопросов.Вы получаете стабильную работу системы и оперативную помощь при любых обращениях.</p>
       </div>
     </div>
   </div>
